--- a/app/_includes/entities/page/page.teaser.html
+++ b/app/_includes/entities/page/page.teaser.html
@@ -4,7 +4,7 @@
   {% assign pages = site.pages | sort: 'order' %}
 
   {% for page in pages %}
-  {% assign pageTitle = page.title | downcase %}
+  {% assign pageTitle = page.machine_name | downcase %}
 
     {% for reference in references %}
 
@@ -14,10 +14,10 @@
         <h3 class="title">{{page.title}}</h3>
         <p class="keywords">{{page.keywords}}</p>
         <p class="description">{{page.teaserText}}</p>
-        <a href="/{{page.title | downcase}}" class="button">Lees meer</a>
+        <a href="/{{page.machine_name | downcase}}" class="button">Lees meer</a>
       </div>
       <picture class="focuspoint reference-image">
-        <img class="img" src="{{page.headerimage}}" alt="{{page.title}}">
+        <img class="img" src="{{page.headerimage}}" alt="{{page.machine_name}}">
       </picture>
     </article>
     {% endif %}
