--- a/app/assets/sass/elements/blocks/_block.references.scss
+++ b/app/assets/sass/elements/blocks/_block.references.scss
@@ -1,5 +1,30 @@
 .block.references {
-	.inner {
+  position: relative;
+
+  &:before {
+    content: '';
+    width: 40px;
+    transform: translateX(-100%);
+    height: 100%;
+    background-color: $white;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 2;
+  }
+
+  &:after {
+    content: '';
+    width: 40px;
+    height: 100%;
+    transform: translateX(100%);
+    background-color: $white;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  .inner {
 		.reference {
 			display: flex;
 			flex-direction: column;
@@ -7,8 +32,7 @@
 			overflow: hidden;
 			position: relative;
 			margin-bottom: $padding;
-			text-align: center;
-			min-height: $gutter * 10;
+      text-align: center;
 			color: $white;
 			position: relative;
 
@@ -31,14 +55,16 @@
 				position: absolute;
 				z-index: 500;
 				left: 0%;
-				height: 220px;
+        height: 200px;
         width: 100%;
         margin-top: $gutter;
 
 				.title {
 					@include font('title');
           text-shadow: $text-shadow;
-          font-size: 1.7rem;
+          font-size: 2rem;
+          padding: 0 20px;
+          // word-break: break-all;
 				}
 
 				.keywords {
@@ -80,6 +106,16 @@
 			}
 		}
 	}
+}
+
+@include breakpoint( max-width bpmax($desktop) ) {
+  .block.references {
+    .inner {
+      .reference {
+        height: calc(100vw - 20vw);
+      }
+    }
+  }
 }
 
 // responsive are (front) -page dependant.
