--- a/app/assets/sass/elements/blocks/_block.usp.scss
+++ b/app/assets/sass/elements/blocks/_block.usp.scss
@@ -1,4 +1,29 @@
 .block.usps {
+  position: relative;
+  
+  &:before {
+    content: '';
+    width: 40px;
+    transform: translateX(-100%);
+    height: 100%;
+    background-color: $white;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 2;
+  }
+
+  &:after {
+    content: '';
+    width: 40px;
+    height: 100%;
+    transform: translateX(100%);
+    background-color: $white;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
 	.usp {
 		margin-bottom: $gutter*4;
 		display: flex;
@@ -21,6 +46,16 @@
 			left: calc(#{$max-width} / 24 * 1);
 		}
 	}
+}
+
+@include breakpoint( max-width bpmax($desktop) ) {
+	.block.usps {
+		.usp {
+      .picture {
+        height: calc(100vw - 20vw);
+      }
+    }
+  }
 }
 
 @include breakpoint($desktop) {
