--- a/app/assets/sass/mixins/_font.scss
+++ b/app/assets/sass/mixins/_font.scss
@@ -12,6 +12,7 @@
     font-family: "MuseoSans";
     font-size: 2rem;
     letter-spacing: 0.3;
+    line-height: 1.2;
     text-transform: uppercase;
     font-weight: 500;
   }
