--- a/app/assets/sass/elements/blocks/_block.usp.scss
+++ b/app/assets/sass/elements/blocks/_block.usp.scss
@@ -15,7 +15,7 @@
 
   &:after {
     content: '';
-    width: 40px;
+    height: calc(100% + 20px);
     height: 100%;
     transform: translateX(100%);
     background-color: $white;
