--- a/app/assets/sass/pages/_detail.scss
+++ b/app/assets/sass/pages/_detail.scss
@@ -39,7 +39,7 @@
 		.element .button {
 			text-align: center;
 			text-transform: uppercase;
-			width: #{100vw / 24 * 22};
+      width: #{100vw / 24 * 22};
 		}
 
     .block {
@@ -56,7 +56,7 @@
 
         .inner {
           .subtitle {
-            display: none;
+            // display: none;
           }
 
           .introduction {
@@ -130,10 +130,11 @@
 
             .reference {
               height: 300px;
+
               .introduction {
                 padding: 0 20px !important;
                 margin: 10px 0;
-                height: 80%;
+                height: 65%;
 
                 .title {
                   font-size: 1.5rem !important;
