--- a/app/assets/sass/elements/blocks/_block.usp.scss
+++ b/app/assets/sass/elements/blocks/_block.usp.scss
@@ -5,7 +5,7 @@
     content: '';
     width: 40px;
     transform: translateX(-100%);
-    height: 100%;
+    height: calc(100% + 40px);
     background-color: $white;
     position: absolute;
     left: 0;
