building the new testimonals and replacing imgs

--- a/app/_includes/block/block.contactform.html
+++ b/app/_includes/block/block.contactform.html
@@ -1,7 +1,7 @@
 {% capture block %}
 	<form id="gform" class="form" method="POST">
 		<strong class="subtitle">Contact</strong>
-		<p>Heb je een vraag of wil je kennis maken? Bel op <a class="tel"></a> of stuur me een berichtje.</p>
+		<p>Heb je een vraag? Bel op <a class="tel"></a> of stuur me een berichtje.</p>
 
 		<div class="salutation">
 			<label for="name">Naam</label>
