--- a/app/assets/sass/elements/testimonials/_owl-carousel-overrides.scss
+++ b/app/assets/sass/elements/testimonials/_owl-carousel-overrides.scss
@@ -9,49 +9,48 @@
 	position: relative;
 
 
-	.owl-dots {
-		position: relative;
-		width: calc(#{$max-width} / 24 * 18);
-		margin-left: calc(#{$max-width} / 24 * 2);
-		z-index: 50;
-	    counter-reset: increment;
-	    bottom: -$padding/1.5;
-	    white-space: nowrap;
-		z-index: -2;
-		overflow: hidden;
+	// .owl-dots {
+	// 	position: relative;
+	// 	width: calc(#{$max-width} / 24 * 18);
+	// 	margin-left: calc(#{$max-width} / 24 * 2);
+	// 	z-index: 50;
+	//     counter-reset: increment;
+	//     bottom: -$padding/1.5;
+	//     white-space: nowrap;
+	// 	z-index: -2;
+	// 	overflow: hidden;
 
-		.owl-dot {
-			width: calc(#{$max-width} / 24 * 1.8);
-			transition: all $speed $easing-cubic;
+	// 	.owl-dot {
+	// 		width: calc(#{$max-width} / 24 * 1.8);
+	// 		transition: all $speed $easing-cubic;
 
-			&:before {
-				counter-increment: increment;
-				content: counter(increment);
-				color: $secundary;
-				font-weight: 600;
-				padding: 5px;
-				opacity: .2;
+	// 		&:before {
+	// 			counter-increment: increment;
+	// 			content: counter(increment);
+	// 			color: $secundary;
+	// 			font-weight: 600;
+	// 			padding: 5px;
+	// 			opacity: .2;
 
-			}
-			&:hover {
-				&:before {
-					opacity: .5;
-				}
-			}
+	// 		}
+	// 		&:hover {
+	// 			&:before {
+	// 				opacity: .5;
+	// 			}
+	// 		}
 			
-			span {
-				display: none;
-			}
+	// 		span {
+	// 			display: none;
+	// 		}
 			
-			&.active {
-				&:before {
-					opacity: 1;
-				}
-			}
+	// 		&.active {
+	// 			&:before {
+	// 				opacity: 1;
+	// 			}
+	// 		}
+	// 	}
+  // }
 
-		}
-
-	}
 	.owl-prev,
 	.owl-next {
 		fill: $primary;
@@ -75,17 +74,24 @@
 
 	.owl-next {
 		right: 0;
-	}
+  }
+  
+  + .pagination {
+    text-align: center;
+    line-height: 0;
+    margin-top: -11px;
+    font-size: 18px;
+  }
 }
 
-@for $i from 1 through 6 {
+// @for $i from 1 through 6 {
 
-	[data-item="#{$i}"] {
-	    .owl-dot {
-			transform: translateX( calc(#{$max-width} / 24 * (18 * #{$i}) * -1));
-	    }
-	}
-}
+// 	[data-item="#{$i}"] {
+// 	    .owl-dot {
+// 			transform: translateX( calc(#{$max-width} / 24 * (18 * #{$i}) * -1));
+// 	    }
+// 	}
+// }
 
 @include breakpoint($desktop) {
 	.owl-carousel {
@@ -102,15 +108,15 @@
 
 		}
 
-		.owl-dots {
-			margin-bottom: 10px;
-			width: calc(#{$max-width} / 37 * 17);
-			margin-left: calc(#{$max-width} / 37 * 0);
+		// .owl-dots {
+		// 	margin-bottom: 10px;
+		// 	width: calc(#{$max-width} / 37 * 17);
+		// 	margin-left: calc(#{$max-width} / 37 * 0);
 
-			.owl-dot {
-				width: calc(#{$max-width} / 37 * 1.7);
-			}
-		}
+		// 	.owl-dot {
+		// 		width: calc(#{$max-width} / 37 * 1.7);
+		// 	}
+		// }
 
 		.owl-prev,
 		.owl-next {
@@ -127,12 +133,12 @@
 		}
 	}
 
-	@for $i from 1 through 6 {
+	// @for $i from 1 through 6 {
 
-		[data-item="#{$i}"] {
-		    .owl-dot {
-				transform: translateX( calc(#{$max-width} / 37 * (17 * #{$i}) * -1));
-		    }
-		}
-	}
+	// 	[data-item="#{$i}"] {
+	// 	    .owl-dot {
+	// 			transform: translateX( calc(#{$max-width} / 37 * (17 * #{$i}) * -1));
+	// 	    }
+	// 	}
+	// }
 }
