--- a/app/_includes/section/section.head.html
+++ b/app/_includes/section/section.head.html
@@ -26,12 +26,12 @@
 	<meta name="theme-color" content="#ffffff">
 
 	<!-- OG -->
-	<meta property="og:title" content="{{ site.author.name }}">
+	<meta property="og:title" content="{{ site.title }}">
 	<meta property="og:description" content="{{ site.description }}">
-	<meta property="og:image" content="{{ site.url | replace: 'http:', 'https:' }}{{ page.headerimage }}">
+	<meta property="og:image" content="{{ site.url }}{{ page.headerimage }}">
 	<meta property="og:image:width" content="{{page.imagewidth}}" />
 	<meta property="og:image:height" content="{{page.imageheight}}" />
-	<meta property="og:url" content="{{ site.url | replace: 'http:', 'https:' }}{{ page.url }}">
+	<meta property="og:url" content="{{ site.url }}{{ page.url }}">
 	<meta property="og:type" content="website">
 	<meta property="og:site_name" content="{{ site.author.name }}">
 	<meta name="twitter:site" content="@{{site.author.twitter}}" />
