gtag button implement

--- a/app/_includes/block/block.contactform.html
+++ b/app/_includes/block/block.contactform.html
@@ -21,7 +21,7 @@
 
 	  <input type="hidden" id="honeypot" type="text" name="honeypot" value="" />
 	  <input type="hidden" class="to" type="text" name="to" value="" />
-	  <input class="send button" type="submit" value="Verstuur bericht" >
+	  <input class="send button" id="google-tracker" type="submit" value="Verstuur bericht" >
 	  <span class="checkmark">{% include svg/checkmark.svg %}</span>
 	</form>
 	{% if include.image%}
