--- a/app/_includes/section/section.head.html
+++ b/app/_includes/section/section.head.html
@@ -46,7 +46,10 @@
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
     gtag('config', 'AW-960541273');
-	</script>
+  </script>
+  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
+
 	
 	<!-- Event snippet for Aanvraagformulier conversion page In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
 	<script> function gtag_report_conversion(url) { var callback = function () { if (typeof(url) != 'undefined') { window.location = url; } }; gtag('event', 'conversion', { 'send_to': 'AW-960541273/LvODCLWv-HsQ2eSCygM', 'event_callback': callback }); return false; } </script>
