--- a/app/_includes/block/block.contactform.html
+++ b/app/_includes/block/block.contactform.html
@@ -20,7 +20,7 @@
     <textarea class="form-field" id="message" name="message" rows="5" placeholder="{{include.message}}" required></textarea>
 
 	  <input type="hidden" id="email" type="text" name="email" value="" />
-	  <input class="send button" id="google-tracker" type="submit" value="Verstuur bericht" >
+	  <input class="send button google-tracker" type="submit" value="Verstuur bericht" >
 	  <span class="checkmark">{% include svg/checkmark.svg %}</span>
 	</form>
 	{% if include.image%}
