--- a/app/_includes/block/block.contactform.html
+++ b/app/_includes/block/block.contactform.html
@@ -22,7 +22,7 @@
     required></textarea>
 
   <input type="hidden" id="email" type="text" name="email" value="" />
-  <input class="send button" type="submit" value="Verstuur bericht">
+  <input class="send button" type="button" value="Verstuur bericht">
   <span class="checkmark">{% include svg/checkmark.svg %}</span>
 </form>
 {% if include.image%}
